<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolbarTheme">

            <TextView
                style="@style/NavTitleText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nav_settings" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery"
        style="@style/SettingsTitle"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/viewPhraseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_phrase"
        style="@style/SettingsButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        style="@style/SettingsTitle"
        android:layout_margin="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/clearWalletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_wallet"
        style="@style/SettingsButton" />

</LinearLayout>
