<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.DiagnosticActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="Send a Bug Report"
        app:titleTextColor="@color/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="UnusedAttribute" />

    <ScrollView
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bug_report_message"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_model"
                style="@style/SettingsButton" />

            <TextView
                android:id="@+id/deviceModelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_version"
                style="@style/SettingsButton" />

            <TextView
                android:id="@+id/androidVersionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locale"
                style="@style/SettingsButton" />

            <TextView
                android:id="@+id/localeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blockeq_app_version"
                style="@style/SettingsButton" />

            <TextView
                android:id="@+id/appVersionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_address_of_stellar_account"
                style="@style/SettingsButton" />

            <TextView
                android:id="@+id/publicAddressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advanced_security_passphrase"
                style="@style/SettingsButton"/>

            <TextView
                android:id="@+id/passphraseUsedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RegularText"
                android:textColor="@color/paleSky"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovery_type"
                style="@style/SettingsButton"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <RadioGroup
                android:id="@+id/phraseRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnemonic_phrase_12_words"
                    android:layout_margin="@dimen/activity_vertical_margin" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnemonic_phrase_24_words"
                    android:layout_margin="@dimen/activity_vertical_margin" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered_secret_seed"
                    android:layout_margin="@dimen/activity_vertical_margin" />

            </RadioGroup>

            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/explain_problem"-->
                <!--style="@style/SettingsButton"-->
                <!--android:layout_marginTop="@dimen/activity_vertical_margin"/>-->

            <!--<EditText-->
                <!--android:id="@+id/explanationEditText"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:lines="4"-->
                <!--style="@style/RegularText"-->
                <!--android:gravity="top|start"-->
                <!--android:background="@drawable/bg_edit_text"-->
                <!--android:padding="@dimen/activity_vertical_margin"-->
                <!--android:importantForAutofill="no"-->
                <!--android:hint="@string/explanation_hint"-->
                <!--android:layout_margin="@dimen/activity_vertical_margin"-->
                <!--android:inputType="textMultiLine"-->
                <!--tools:ignore="UnusedAttribute" />-->

            <Button
                android:id="@+id/sendReportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_report"
                style="@style/PrimaryButtonStyle"
                android:background="@color/blue2"
                android:layout_margin="@dimen/activity_vertical_margin"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
