<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAssetActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute"
        app:title="Add Asset"
        app:titleTextColor="@color/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_below="@id/toolBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_code"
            android:textAllCaps="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textColor="@color/regularTextColor"/>

        <EditText
            android:id="@+id/assetCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/addressBackGroundColor"
            android:textSize="12sp"
            android:fontFamily="@font/lato_regular"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:scrollHorizontally="true"
            android:digits="@string/stellar_address_alphabet"
            android:inputType="textCapCharacters"
            android:hint="@string/asset_code_hint" />

        <TextView
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issuer_address"
            android:textAllCaps="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textColor="@color/regularTextColor"/>

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/addressBackGroundColor"
            android:fontFamily="@font/lato_regular"
            android:textSize="12sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:scrollHorizontally="true"
            android:digits="@string/stellar_address_alphabet"
            android:inputType="textCapCharacters"
            android:hint="@string/send_address_hint" />

        <Button
            android:id="@+id/addAssetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_asset"
            style="@style/PrimaryButtonStyle"
            android:background="@color/blue2"
            android:layout_margin="@dimen/activity_vertical_margin" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>
