<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InflationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute"
        app:title="@string/inflation_destination_title"
        app:titleTextColor="@color/colorPrimaryDark"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_below="@id/toolBar"
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:background="@drawable/bg_rounded_button_blue">

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:padding="12dp"
            android:background="@color/addressBackGroundColor"
            android:textSize="12sp"
            android:scrollHorizontally="true"
            android:digits="@string/stellar_address_alphabet"
            android:inputType="textCapCharacters"
            android:hint="@string/send_address_hint" />

        <ImageButton
            android:id="@+id/cameraImageButton"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@drawable/ic_camera"/>

    </LinearLayout>

    <TextView
        android:id="@+id/inflationInfoTextView"
        android:layout_below="@+id/addressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularText"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/inflation_info_message"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sendButtonColor"
        android:textColor="@color/white"
        style="@style/ButtonStyle"
        android:text="@string/save_button"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

</RelativeLayout>