<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_size_medium"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/toggleMarket"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight=".5"
                android:background="@drawable/left_toggle_selected"
                android:text="@string/market" />

            <Button
                android:id="@+id/toggleLimit"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight=".5"
                android:background="@drawable/right_toggle"
                android:text="@string/limit" />
        </LinearLayout>

        <blockeq.com.stellarwallet.reusables.views.CustomSelector
            android:id="@+id/sellingCustomSelector"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeColor="@color/terracotta"
            app:hint="@string/selling_hint"
            app:inputType="decimal">

        </blockeq.com.stellarwallet.reusables.views.CustomSelector>

    </LinearLayout>

</LinearLayout>